Box from filter

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -186,3 +186,13 @@ $quantity-btn-color: #95d7fc;
   align-items: center;
   text-align: center;
 }
+
+.add {
+    background: white;
+    color: black;
+    margin: 0;
+    position: absolute;
+    top: -1px !important;
+    right: -1px !important;
+}
+
