--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,55 +3,58 @@
   <div class="row">
     <div class="col-xs-11 col-xs-offset-1">
       <div class="search-filter-box">
-        <i class="fas fa-search"></i>
-          <div class="search">
-            <%= simple_form_for :term, url: items_path, method: :get do |f| %>
-            <%= f.input_field :query, label: false, placeholder: "",
-            input_html: { value: @results.first.address }%>
-          </div>
-          <div class="filter">
-            <a class="btn-filter" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">FILTER</a>
-          </div>
+          <i class="fas fa-search"></i>
+        <div class="search">
+          <%= simple_form_for :term, url: items_path, method: :get do |f| %>
+          <%= f.input_field :query, label: false, placeholder: "",
+          input_html: { value: @results.first.address } do %>
+          <% end %>
         </div>
+        <div class="filter">
+          <a class="btn-filter" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">FILTER</a>
+        </div>
+      </div>
 
       <div class="collapse" id="collapseExample">
         <div class="filter-body">
           <div class="filter-modal">
             <div class="catg-filter">
-               <div class="box-category-type">
-              <div class="row">
+             <div class="box-category-type">
+              <div class="">
 
-              <div id="type-filter2">
-              <div class="search-filter1-box">
-
-              <%= f.input :catg, item_wrapper_class: "inline-item" ,label: 'CATEGORY', as: :check_boxes, collection: Item::CATEGORY%>
-            </div>
-             </div>
-
-            </div>
-            <div class="type-filter">
-              <div class="row">
-                <br>
-                <div class="search-filter1-box">
                 <div id="type-filter2">
+                  <div class="search-filter1-box">
 
-              <%= f.input :att, item_wrapper_class: "inline-item", label: 'TYPE', as: :check_boxes, label_html: { class: "filter-style" },  collection: Item::TYPES%>
+                    <%= f.input :catg, required: false, item_wrapper_class: "inline-item" ,label: 'CATEGORY', as: :check_boxes, collection: Item::CATEGORY%>
+                  </div>
+                </div>
+
+              </div>
+              <div class="type-filter">
+                <div class="">
+                  <br>
+                  <div id="type-filter3">
+                    <div class="search-filter1-box">
+
+
+                      <%= f.input :att, required: false, item_wrapper_class: "inline-item", label: 'TYPE', as: :check_boxes, label_html: { class: "filter-style" },  collection: Item::TYPES%>
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <div class="allign-button">
+                  <%= f.button :submit, "APPLY", class: "my-button" %>
+                </div>
+
+              </div>
             </div>
-             </div>
-             <br>
-            <div class="allign-button">
-              <%= f.button :submit, "APPLY", class: "my-button" %>
-            </div>
-            </div>
-            </div>
-             </div>
-             </div>
           </div>
         </div>
       </div>
-      <% end %>
     </div>
+    <% end %>
   </div>
+</div>
 </div>
 
 
@@ -60,11 +63,11 @@
   <div class="row">
     <div class="col-xs-11 col-xs-offset-1">
 
-<div class="search-filter1-box">
-<h2> NEW FOOD </h2>
-</div>
-</div>
-</div>
+      <div class="search-filter1-box">
+        <h2> NEW FOOD </h2>
+      </div>
+    </div>
+  </div>
 </div>
 
 <% @items.each do |item| %>
