--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
           <%= cl_image_tag(current_user.avatar, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" ) %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "#" do %>
+              <%= link_to current_user do %>
                 <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
               <% end %>
             </li>
@@ -63,14 +63,44 @@
       <div class="dropdown">
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><%= link_to "Why us", home_path %></li>
-          <li><%= link_to "Discover", "#"  %></li>
-          <li><%= link_to "Shopping Cart", cart_path  %></li>
+          <li><%= link_to home_path do %>
+                <%= icon('fas', 'question') %>
+                <%= t(".why", default: "Why us") %>
+              <% end %>
+          </li>
+          <li>
+            <%= link_to "#" do %>
+              <%= icon('fas', 'globe') %>
+              <%= t(".discover", default: "Discover") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to cart_path do %>
+              <%= icon('fas', 'shopping-cart') %>
+              <%= t(".shopping-cart", default: "Cart") %>
+            <% end %>
+          </li>
           <% if policy(Item).create? %>
-            <li><%= link_to "Upload", new_item_path %></li>
+            <li>
+              <%= link_to new_item_path do %>
+                <%= icon('fas', 'upload') %>
+                <%= t(".upload", default: "Upload") %>
+              <% end %>
+            </li>
           <% end %>
 
-          <li><%= link_to "Settings", new_item_path %></li>
+          <li>
+            <%= link_to new_item_path do %>
+              <%= icon('fas', 'cog') %>
+              <%= t(".settings", default: "Settings") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to current_user do %>
+              <%= icon('fas', 'user') %>
+              <%= t(".profile", default: "Profile") %>
+            <% end %>
+          </li>
           <li>
             <%= link_to destroy_user_session_path, method: :delete do %>
               <i class="fa fa-sign-out-alt"></i>  <%= t(".sign_out", default: "Log out") %>
