--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,22 @@
-<div class="cat-parent banner">
- <div class="cat-container" style="text-align: center;">
-  <h1>
-    <span id="banner-typed-text";"></span>
-  </h1>
-  <button class="button-banner">Eat consciously!</button>
-</div>
-</div>
-
+<div class="banner"></div>
 <div class="container-fluid cfhome ">
   <div class="container home-one">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="caps caps1">We are the new recyclers in town.</h2>
-      </div>
-      <div class="col-md-6">
-        <p>Eat for a fair price and save unsold food from being wasted. Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that.</p>
+        <div class="cat-parent">
+         <div class="cat-container" style="text-align: center;">
+          <h1>
+            <span id="banner-typed-text";"></span>
+          </h1>
+          <!-- <button class="button-banner">Eat consciously!</button> -->
+        </div>
       </div>
     </div>
+    <div class="col-md-6">
+      <p>Eat for a fair price and save unsold food from being wasted. Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that.</p>
+    </div>
   </div>
+</div>
 </div>
 
 <div class="container home-two">
@@ -42,21 +41,21 @@
       </div>
     </div>
   </div>
+
 </div>
 
 <div class="container-fluid cfhome">
-  <div class="container home-three">
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="caps caps1">This is how waste'd works.</h2>
-      </div>
-      <div class="col-md-6">
-        <ol>
-          <li>Download the app and browse unsold food from restaurants, cafes and grocery stores.</li>
-          <li> Select and purchase food for 1/2 price -- all within the app.</li>
-          <li>Pick it up as takeaway and enjoy!</li>
-        </ol>
-      </div>
+   <div class="row">
+    <div class="col-md-6">
+      <h2 class="caps caps1">This is how you can connect.</h2>
+    </div>
+    <div class="col-md-6">
+      <ol>
+        <li>Suscribe to our system.</li>
+        <li>Upload a restaurant.</li>
+        <li>Take a picture of the food that you don't want yo throw away and set time.</li>
+        <li>Consumer will pick it up as takeaway.</li>
+      </ol>
     </div>
   </div>
 </div>
@@ -94,4 +93,45 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="container-fluid cfhome">
+  <div class="row">
+    <div class="col-md-6">
+      <h2 class="caps caps1">This is how waste'd works.</h2>
+    </div>
+    <div class="col-md-6">
+      <ol>
+        <li>Download the app and browse unsold food from restaurants, cafes and grocery stores.</li>
+        <li>Select & purchase food for ½ price - all within the app.</li>
+        <li>Pick it up & enjoy!.</li>
+      </ol>
+    </div>
+  </div>
+</div>
+
+
+<div class="container home-two">
+  <div class="row">
+    <div class="col-sm-12 col-md-4 caps">
+      <div class="whatever">
+        <div class="image"><%= image_tag "revenue.svg" %></div>
+        SAVE MONEY
+      </div>
+
+    </div>
+    <div class="col-sm-12 col-md-4 caps">
+      <div class="whatever">
+        <div class="image"><%= image_tag "piggy-bank.svg" %></div>
+        REDUCE FOOD WASTE
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-4 caps">
+      <div class="whatever">
+        <div class="image"><%= image_tag "success.svg" %></div>
+        EAT CONSCIOUSLY
+      </div>
+    </div>
+  </div>
+
 </div>
