--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -3,16 +3,18 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  text-align:center;
+  padding: 0px 10px;
 }
 
 .cfhome{
   background-color: #221F1F;
   color: #fff;
-  padding: 80px 0px;
+  padding: 45px 0px;
 }
 
 .home-two{
-  padding: 100px 0px 120px;
+  padding: 100px 0px 70px;
   .image{
     width: 80px;
     height: 80px;
