--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,1 +1,7 @@
+<div class="container" style="text-align: center;">
+<div class="row" >
+ <h3>Upload your item</h3>
+ </div>
+ </div>
+
 <%= render 'form', item: @item, feature: @feature %>
