--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,20 +115,20 @@
   <div class="row">
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
-        <div class="image"><%= image_tag "revenue.svg" %></div>
+        <div class="image"><%= image_tag "savemoney.svg" %></div>
         SAVE MONEY
       </div>
 
     </div>
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
-        <div class="image"><%= image_tag "piggy-bank.svg" %></div>
+        <div class="image"><%= image_tag "recycle-sign.svg" %></div>
         REDUCE FOOD WASTE
       </div>
     </div>
     <div class="col-sm-12 col-md-4 caps">
       <div class="whatever">
-        <div class="image"><%= image_tag "success.svg" %></div>
+        <div class="image"><%= image_tag "silverware.svg" %></div>
         EAT CONSCIOUSLY
       </div>
     </div>
