--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,36 +17,36 @@
   <!-- TABLE FOR CONSUMER -->
   <% if policy(User).consumer? %>
 
-    <% if current_user.role == 'both' %>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class='as-user-role text-center'>
-            <h3>AS CONSUMER</h3>
-          </div>
-        </div>
-      </div>
-    <% end %>
-
-    <div class="row">
-      <div class="col-xs-4">
-        <div class="item-holder">
-          <h4><%= current_user.items_rescued_by_consumer %></h4>
-          <h3>items rescued</h3>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="item-holder">
-          <h4><%= humanized_money_with_symbol(current_user.money_saved) %></h4>
-          <h3>saved</h3>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="item-holder">
-          <h4> <%= current_user.food_rescued_by_consumer %> kg</h4>
-          <h3>food rescued</h3>
-        </div>
+  <% if current_user.role == 'both' %>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class='as-user-role text-center'>
+        <h3>AS CONSUMER</h3>
       </div>
     </div>
+  </div>
+  <% end %>
+
+  <div class="row">
+    <div class="col-xs-4">
+      <div class="item-holder">
+        <h4><%= current_user.items_rescued_by_consumer %></h4>
+        <h3>items rescued</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="item-holder">
+        <h4><%= humanized_money_with_symbol(current_user.money_saved) %></h4>
+        <h3>saved</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="item-holder">
+        <h4> <%= current_user.food_rescued_by_consumer %> kg</h4>
+        <h3>food rescued</h3>
+      </div>
+    </div>
+  </div>
 
   <% end %>
   <!-- END TABLE FOR CONSUMER -->
@@ -54,37 +54,37 @@
   <!-- TABLE FOR SUPPLIER -->
   <% if policy(User).supplier? %>
 
-    <% if current_user.role == 'both' %>
-      <hr>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class='as-user-role text-center'>
-            <h3>AS SUPPLIER</h3>
-          </div>
-        </div>
-      </div>
-    <% end %>
-
-    <div class="row">
-      <div class="col-xs-4">
-        <div class="item-holder">
-          <h4><%= current_user.items_rescued_by_supplier %></h4>
-          <h3> items rescued</h3>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="item-holder">
-          <h4><%= humanized_money_with_symbol(current_user.money_earned) %></h4>
-          <h3> earned</h3>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="item-holder">
-          <h4> <%= current_user.food_rescued_by_supplier %> kg</h4>
-          <h3> food rescued</h3>
-        </div>
+  <% if current_user.role == 'both' %>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class='as-user-role text-center'>
+        <h3>AS SUPPLIER</h3>
       </div>
     </div>
+  </div>
+  <% end %>
+
+  <div class="row">
+    <div class="col-xs-4">
+      <div class="item-holder">
+        <h4><%= current_user.items_rescued_by_supplier %></h4>
+        <h3> items rescued</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="item-holder">
+        <h4><%= humanized_money_with_symbol(current_user.money_earned) %></h4>
+        <h3> earned</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="item-holder">
+        <h4> <%= current_user.food_rescued_by_supplier %> kg</h4>
+        <h3> food rescued</h3>
+      </div>
+    </div>
+  </div>
 
   <% end %>
   <!-- END TABLE FOR SUPPLIER -->
@@ -96,117 +96,116 @@
 
 <!-- ORDERS CONTAINER -->
 <% if policy(User).consumer? %>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-67 table-col background-color-profile">
-        <!-- ACCOUNT INFO -->
-        <div class="user-info">
-          <!-- CARD INFORMATION -->
-          <div class="user-card-info">
-            <!-- CARD TITLE / ACCOUNT INFO-->
-            <div class="user-card-title">
-              <h2>ACCOUNT INFO</h2>
-              <%= link_to "Edit", edit_user_registration_path %>
-            </div>
-            <!-- CARD DETAILS -->
-            <div class="user-card-details">
-              <p><%= current_user.name %></p>
-              <p><%= current_user.email %></p>
-            </div>
+<div class="container" style="margin-bottom: 20px;">
+  <div class="row">
+    <div class="col-xs-67 table-col background-color-profile">
+      <!-- ACCOUNT INFO -->
+      <div class="user-info">
+        <!-- CARD INFORMATION -->
+        <div class="user-card-info">
+          <!-- CARD TITLE / ACCOUNT INFO-->
+          <div class="user-card-title">
+            <h2>ACCOUNT INFO</h2>
+            <%= link_to "Edit", edit_user_registration_path %>
+          </div>
+          <!-- CARD DETAILS -->
+          <div class="user-card-details">
+            <p><%= current_user.name %></p>
+            <p><%= current_user.email %></p>
           </div>
         </div>
-        <!-- END ACCOUNT INFO -->
+      </div>
+      <!-- END ACCOUNT INFO -->
 
-        <!-- ADDRESSES & PAYMENTS -->
-        <div class="user-info">
-          <div class="user-card-info">
-            <!-- CARD TITLE / ADDRESS-->
-            <div class="user-card-title">
-              <h2>ADDRESSES & PAYMENTS</h2>
-              <%= link_to "Edit", edit_user_registration_path %>
-            </div>
-            <!-- CARD DETAILS -->
-            <div class="user-card-details">
-             <p><%= current_user.name %></p>
-             <p><%= current_user.email %></p>
-           </div>
+      <!-- ADDRESSES & PAYMENTS -->
+      <div class="user-info">
+        <div class="user-card-info">
+          <!-- CARD TITLE / ADDRESS-->
+          <div class="user-card-title">
+            <h2>ADDRESSES & PAYMENTS</h2>
+            <%= link_to "Edit", edit_user_registration_path %>
+          </div>
+          <!-- CARD DETAILS -->
+          <div class="user-card-details">
+           <p><%= current_user.name %></p>
+           <p><%= current_user.email %></p>
          </div>
-        </div>
-        <!-- END ADDRESSES & PAYMENTS -->
+       </div>
+     </div>
+     <!-- END ADDRESSES & PAYMENTS -->
 
-        <!-- COMPLETED ORDERS -->
-        <div class="user-info">
-          <!-- CARD INFORMATION -->
-          <div class="user-card-info">
-            <!-- CARD TITLE / ARENAS-->
-            <div class="user-card-title">
-              <h2>COMPLETED ORDERS (<%= @paid.size %>)</h2>
-              <%= link_to "Edit", edit_user_registration_path %>
+     <!-- COMPLETED ORDERS -->
+     <div class="user-info">
+      <!-- CARD INFORMATION -->
+      <div class="user-card-info">
+        <!-- CARD TITLE / ARENAS-->
+        <div class="user-card-title">
+          <h2>COMPLETED ORDERS (<%= @paid.size %>)</h2>
+          <%= link_to "Edit", edit_user_registration_path %>
+        </div>
+        <!-- CARD DETAILS -->
+        <div class="user-card-details">
+          <% @paid.each do |order| %>
+          <div class="row">
+            <div class="col-xs-2 col-sm-1">
+              <%= link_to "##{order.id}", order %>
             </div>
-            <!-- CARD DETAILS -->
-            <div class="user-card-details">
-              <% @paid.each do |order| %>
-                <div class="row">
-                  <div class="col-xs-2 col-sm-1">
-                    <%= link_to "##{order.id}", order %>
-                  </div>
-                  <div class="col-xs-2 col-sm-1">
-                    <%= humanized_money_with_symbol(order.amount) %>
-                  </div>
-                  <div class="col-xs-3 col-sm-2 col-md-1">
-                    <%= order.created_at.strftime('%b %e') %>
-                  </div>
-                  <div class="col-xs-5 col-sm-8 col-md-9">
-                    <%= order.order_purchased_items %>
-                  </div>
-                </div>
-              <% end %>
+            <div class="col-xs-2 col-sm-1">
+              <%= humanized_money_with_symbol(order.amount) %>
+            </div>
+            <div class="col-xs-3 col-sm-2 col-md-1">
+              <%= order.created_at.strftime('%b %e') %>
+            </div>
+            <div class="col-xs-5 col-sm-8 col-md-9">
+              <%= order.order_purchased_items %>
             </div>
           </div>
+          <% end %>
         </div>
-        <!-- END COMPLETED ORDERS -->
+      </div>
+    </div>
+    <!-- END COMPLETED ORDERS -->
 
-        <!-- PENDING ORDERS -->
-        <div class="user-info">
-         <!-- CARD INFORMATION -->
-          <div class="user-card-info">
-            <!-- CARD TITLE -->
-            <div class="user-card-title">
-              <h2>PENDING ORDERS (<%= @pending.size %>)</h2>
-              <%= link_to "Edit", edit_user_registration_path %>
-            </div>
-            <!-- CARD DETAILS -->
-            <div class="user-card-details">
-              <% @pending.each do |order| %>
-                <div class="row">
-                  <div class="col-xs-2 col-sm-1">
-                    <%= link_to "##{order.id}", order %>
-                  </div>
-                  <div class="col-xs-1 col-sm-1">
-                    <%= link_to icon('fas', 'credit-card'), new_order_payment_path(order) %>
-                  </div>
-                  <div class="col-xs-1 col-sm-1">
-                    <%= link_to icon('fas', 'trash-alt'), order_path(order), class: 'text-danger', method: :delete %>
-                  </div>
-                  <div class="col-xs-2 col-sm-1">
-                    <%= humanized_money_with_symbol(order.amount) %>
-                  </div>
-                  <div class="col-xs-3 col-sm-2 col-md-1">
-                    <%= order.created_at.strftime('%b %e') %>
-                  </div>
-                  <div class="col-xs-3 col-sm-6 col-md-7">
-                    <%= order.order_purchased_items %>
-                  </div>
-                </div>
-              <% end %>
-            </div>
+    <!-- PENDING ORDERS -->
+    <div class="user-info">
+     <!-- CARD INFORMATION -->
+     <div class="user-card-info">
+      <!-- CARD TITLE -->
+      <div class="user-card-title">
+        <h2>PENDING ORDERS (<%= @pending.size %>)</h2>
+        <%= link_to "Edit", edit_user_registration_path %>
+      </div>
+      <!-- CARD DETAILS -->
+      <div class="user-card-details">
+        <% @pending.each do |order| %>
+        <div class="row">
+          <div class="col-xs-2 col-sm-1">
+            <%= link_to "##{order.id}", order %>
+          </div>
+          <div class="col-xs-1 col-sm-1">
+            <%= link_to icon('fas', 'credit-card'), new_order_payment_path(order) %>
+          </div>
+          <div class="col-xs-1 col-sm-1">
+            <%= link_to icon('fas', 'trash-alt'), order_path(order), class: 'text-danger', method: :delete %>
+          </div>
+          <div class="col-xs-2 col-sm-1">
+            <%= humanized_money_with_symbol(order.amount) %>
+          </div>
+          <div class="col-xs-3 col-sm-2 col-md-1">
+            <%= order.created_at.strftime('%b %e') %>
+          </div>
+          <div class="col-xs-3 col-sm-6 col-md-7">
+            <%= order.order_purchased_items %>
           </div>
         </div>
-        <!-- END PENDING ORDERS -->
-
+        <% end %>
       </div>
     </div>
   </div>
+  <!-- END PENDING ORDERS -->
+
+</div>
+</div>
+</div>
 <% end %>
 <!-- END ORDERS CONTAINER -->
-
