--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,8 +2,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-3 search">
-      <%= f.input_field :query, label: false, placeholder: "Address",
-      input_html: { value: @results.first.address }%>
+      <% if @results.any? %>
+        <%= f.input_field :query, label: false, placeholder: "Address",
+        input_html: { value: @results.first.address }%>
+      <% end %>
     </div>
     <div class="col-md-2 filter">
       <a class="btn-filter" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Filter</a>
