--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,9 @@
    <%= f.input :username,
    autofocus: true,
    required: true , input_html: { class: "input-bar"} %>
+      <%= f.input :name,
+   autofocus: true,
+   required: true , input_html: { class: "input-bar"} %>
    <%= f.input :role, as: :radio_buttons, collection: User::ROLES, wrapper: :vertical_collection_inline %>
    <%= f.input :avatar, as: :file%>
    <%= f.input :email,
