Add hour to pickup time in seed

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,8 +7,10 @@
         <div class="search">
 
           <%= simple_form_for :term, url: items_path, method: :get do |f| %>
+          <% if @results.any? %>
           <%= f.input_field :query, label: false, placeholder: "",
           input_html: { value: @results.first.address } do %>
+          <% end %>
           <% end %>
         </div>
         <div class="filter">
