filters working again

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,7 +19,7 @@
             <p><i class="fas fa-circle line-breaker"></i></p>
             </div>
             <div class="col-md-3">
-              <p style="font-size: 14px !important;"><strong><%= @item.food_type %></strong></p>
+              <p style="font-size: 14px !important;"><strong><% @item.types.each do |type| %><%= type.name %><% end %></strong></p>
             </div>
           </div>
           <br>
