--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -4,7 +4,7 @@
   <%%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-  <% food_type.each do |attribute| -%>
+  <% @items.types.each do |attribute| -%>
     <%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
   <% end %>
   </div>
