Fixing Basket and and showing random items

--- a/app/assets/stylesheets/components/_card_in_cart.scss
+++ b/app/assets/stylesheets/components/_card_in_cart.scss
@@ -1,8 +1,6 @@
 .main-container {
   .carousels-container {
 
-
-
     .card-body-cart {
       height: 200px;
       weight: 150px;
@@ -92,9 +90,11 @@
     }
 
 
-
-
-
-
   }
 }
+
+.main-container{
+  height: 80vh;
+}
+
+
