--- a/app/assets/stylesheets/pages/_cart.scss
+++ b/app/assets/stylesheets/pages/_cart.scss
@@ -1,3 +1,4 @@
+
 .main-container {
   display: flex;
   width: 100vw;
@@ -23,10 +24,8 @@
   }
   .shopping-cart-container {
   flex: 0 0 400px;
-  height: 100vh;
-  position: sticky !important;
   padding-top: 10px;
-  top: 0;
+      border-left: 1px solid black !important;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,6 +34,8 @@
     }
     .reservations-container {
       padding: 10px 0;
+      overflow: scroll;
+      height: 40vh;
       .reservation {
         display: flex;
         justify-content: flex-start;
@@ -60,3 +61,8 @@
 }
 
 
+.shop-cart-holder {
+  div {
+    padding: 20px;
+  }
+}
