--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,126 +86,190 @@
     </div>
   </div>
 
-  <% end %>
-  <!-- END TABLE FOR SUPPLIER -->
-</div>
-<!-- END STATS CONTAINER -->
-
-
-
-
-<!-- ORDERS CONTAINER -->
-<% if policy(User).consumer? %>
-<div class="container" style="margin-bottom: 20px;">
-  <div class="row">
-    <div class="col-xs-67 table-col background-color-profile">
-      <!-- ACCOUNT INFO -->
-      <div class="user-info">
-        <!-- CARD INFORMATION -->
-        <div class="user-card-info">
-          <!-- CARD TITLE / ACCOUNT INFO-->
-          <div class="user-card-title">
-            <h2>ACCOUNT INFO</h2>
-            <%= link_to "Edit", edit_user_registration_path %>
-          </div>
-          <!-- CARD DETAILS -->
-          <div class="user-card-details">
-            <p><%= current_user.name %></p>
-            <p><%= current_user.email %></p>
-          </div>
-        </div>
-      </div>
-      <!-- END ACCOUNT INFO -->
-
-      <!-- ADDRESSES & PAYMENTS -->
-      <div class="user-info">
-        <div class="user-card-info">
-          <!-- CARD TITLE / ADDRESS-->
-          <div class="user-card-title">
-            <h2>ADDRESSES & PAYMENTS</h2>
-            <%= link_to "Edit", edit_user_registration_path %>
-          </div>
-          <!-- CARD DETAILS -->
-          <div class="user-card-details">
-           <p><%= current_user.name %></p>
-           <p><%= current_user.email %></p>
-         </div>
-       </div>
-     </div>
-     <!-- END ADDRESSES & PAYMENTS -->
-
-     <!-- COMPLETED ORDERS -->
-     <div class="user-info">
-      <!-- CARD INFORMATION -->
-      <div class="user-card-info">
-        <!-- CARD TITLE / ARENAS-->
-        <div class="user-card-title">
-          <h2>COMPLETED ORDERS (<%= @paid.size %>)</h2>
-          <%= link_to "Edit", edit_user_registration_path %>
-        </div>
-        <!-- CARD DETAILS -->
-        <div class="user-card-details">
-          <% @paid.each do |order| %>
-          <div class="row">
-            <div class="col-xs-2 col-sm-1">
-              <%= link_to "##{order.id}", order %>
+  <div class="container" style="margin-bottom: 20px;">
+    <div class="row">
+      <div class="col-xs-67 table-col background-color-profile">
+        <!-- ACCOUNT INFO -->
+        <div class="user-info">
+          <!-- CARD INFORMATION -->
+          <div class="user-card-info">
+            <!-- CARD TITLE / ACCOUNT INFO-->
+            <div class="user-card-title">
+              <h2>Uploades</h2>
             </div>
-            <div class="col-xs-2 col-sm-1">
-              <%= humanized_money_with_symbol(order.amount) %>
-            </div>
-            <div class="col-xs-3 col-sm-2 col-md-1">
-              <%= order.created_at.strftime('%b %e') %>
-            </div>
-            <div class="col-xs-5 col-sm-8 col-md-9">
-              <%= order.order_purchased_items %>
+            <!-- CARD DETAILS -->
+            <div class="user-card-details">
+              <p>Sold items: </p>
+
+              <div class="container">
+                <div class="row">
+                  <% @items_bought.each do |duo| %>
+                  <div class="col-md-3">
+                    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= duo.first.picture %>); margin-top: 10px;">
+                      <div class="card-description">
+                        <h2><%= duo.first.name %></h2>
+                      </div>
+                    </div>
+                    <div class="item-description">
+                      <h6>Bought by: <%= duo.last.username.capitalize %></h6>
+                      <h6>$ <%= duo.first.price %> </h6>
+                    </div>
+                  </div>
+                  <% end %>
+                </div>
+              </div>
+              <div class="user-card-title"></div>
+              <p>Pending items</p>
+              <div class="container">
+                <div class="row">
+                  <% @items_pending.each do |item| %>
+                  <div class="col-md-3">
+                    <div  data-toggle="modal" data-target="#myModal-<%= item.id %>">
+                      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;">
+                        <div class="card-description">
+                          <h2><%= item.name %></h2>
+                        </div>
+                      </div>
+                      <div class="item-description"">
+                        <h6 style="margin: 5px;">$ <%= item.price %> </h6>
+                        <p style="margin: 5px;"><%= link_to 'Edit', edit_item_path(item) %> | <%= link_to 'Delete', item_path(item), method: :delete %></p>
+                      </div>
+                    </div>
+                  </div>
+                  <% end %>
+                </div>
+              </div>
             </div>
           </div>
-          <% end %>
         </div>
-      </div>
-    </div>
-    <!-- END COMPLETED ORDERS -->
 
-    <!-- PENDING ORDERS -->
-    <div class="user-info">
-     <!-- CARD INFORMATION -->
-     <div class="user-card-info">
-      <!-- CARD TITLE -->
-      <div class="user-card-title">
-        <h2>PENDING ORDERS (<%= @pending.size %>)</h2>
-        <%= link_to "Edit", edit_user_registration_path %>
-      </div>
-      <!-- CARD DETAILS -->
-      <div class="user-card-details">
-        <% @pending.each do |order| %>
-        <div class="row">
-          <div class="col-xs-2 col-sm-1">
-            <%= link_to "##{order.id}", order %>
-          </div>
-          <div class="col-xs-1 col-sm-1">
-            <%= link_to icon('fas', 'credit-card'), new_order_payment_path(order) %>
-          </div>
-          <div class="col-xs-1 col-sm-1">
-            <%= link_to icon('fas', 'trash-alt'), order_path(order), class: 'text-danger', method: :delete %>
-          </div>
-          <div class="col-xs-2 col-sm-1">
-            <%= humanized_money_with_symbol(order.amount) %>
-          </div>
-          <div class="col-xs-3 col-sm-2 col-md-1">
-            <%= order.created_at.strftime('%b %e') %>
-          </div>
-          <div class="col-xs-3 col-sm-6 col-md-7">
-            <%= order.order_purchased_items %>
-          </div>
-        </div>
+
+
+
+
         <% end %>
+        <!-- END TABLE FOR SUPPLIER -->
+      </div>
+      <!-- END STATS CONTAINER -->
+
+
+
+
+      <!-- ORDERS CONTAINER -->
+      <% if policy(User).consumer? %>
+      <div class="container" style="margin-bottom: 20px;">
+        <div class="row">
+          <div class="col-xs-67 table-col background-color-profile">
+            <!-- ACCOUNT INFO -->
+            <div class="user-info">
+              <!-- CARD INFORMATION -->
+              <div class="user-card-info">
+                <!-- CARD TITLE / ACCOUNT INFO-->
+                <div class="user-card-title">
+                  <h2>ACCOUNT INFO</h2>
+                  <%= link_to "Edit", edit_user_registration_path %>
+                </div>
+                <!-- CARD DETAILS -->
+                <div class="user-card-details">
+                  <p><%= current_user.name %></p>
+                  <p><%= current_user.email %></p>
+                </div>
+              </div>
+            </div>
+            <!-- END ACCOUNT INFO -->
+
+            <!-- ADDRESSES & PAYMENTS -->
+            <div class="user-info">
+              <div class="user-card-info">
+                <!-- CARD TITLE / ADDRESS-->
+                <div class="user-card-title">
+                  <h2>ADDRESSES & PAYMENTS</h2>
+                  <%= link_to "Edit", edit_user_registration_path %>
+                </div>
+                <!-- CARD DETAILS -->
+                <div class="user-card-details">
+                 <p><%= current_user.name %></p>
+                 <p><%= current_user.email %></p>
+               </div>
+             </div>
+           </div>
+           <!-- END ADDRESSES & PAYMENTS -->
+
+           <!-- COMPLETED ORDERS -->
+           <div class="user-info">
+            <!-- CARD INFORMATION -->
+            <div class="user-card-info">
+              <!-- CARD TITLE / ARENAS-->
+              <div class="user-card-title">
+                <h2>COMPLETED ORDERS (<%= @paid.size %>)</h2>
+                <%= link_to "Edit", edit_user_registration_path %>
+              </div>
+              <!-- CARD DETAILS -->
+              <div class="user-card-details">
+                <% @paid.each do |order| %>
+                <div class="row">
+                  <div class="col-xs-2 col-sm-1">
+                    <%= link_to "##{order.id}", order %>
+                  </div>
+                  <div class="col-xs-2 col-sm-1">
+                    <%= humanized_money_with_symbol(order.amount) %>
+                  </div>
+                  <div class="col-xs-3 col-sm-2 col-md-1">
+                    <%= order.created_at.strftime('%b %e') %>
+                  </div>
+                  <div class="col-xs-5 col-sm-8 col-md-9">
+                    <%= order.order_purchased_items %>
+                  </div>
+                </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+          <!-- END COMPLETED ORDERS -->
+
+          <!-- PENDING ORDERS -->
+          <div class="user-info">
+           <!-- CARD INFORMATION -->
+           <div class="user-card-info">
+            <!-- CARD TITLE -->
+            <div class="user-card-title">
+              <h2>PENDING ORDERS (<%= @pending.size %>)</h2>
+              <%= link_to "Edit", edit_user_registration_path %>
+            </div>
+            <!-- CARD DETAILS -->
+            <div class="user-card-details">
+              <% @pending.each do |order| %>
+              <div class="row">
+                <div class="col-xs-2 col-sm-1">
+                  <%= link_to "##{order.id}", order %>
+                </div>
+                <div class="col-xs-1 col-sm-1">
+                  <%= link_to icon('fas', 'credit-card'), new_order_payment_path(order) %>
+                </div>
+                <div class="col-xs-1 col-sm-1">
+                  <%= link_to icon('fas', 'trash-alt'), order_path(order), class: 'text-danger', method: :delete %>
+                </div>
+                <div class="col-xs-2 col-sm-1">
+                  <%= humanized_money_with_symbol(order.amount) %>
+                </div>
+                <div class="col-xs-3 col-sm-2 col-md-1">
+                  <%= order.created_at.strftime('%b %e') %>
+                </div>
+                <div class="col-xs-3 col-sm-6 col-md-7">
+                  <%= order.order_purchased_items %>
+                </div>
+              </div>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <!-- END PENDING ORDERS -->
+
       </div>
     </div>
   </div>
-  <!-- END PENDING ORDERS -->
-
+  <% end %>
+  <!-- END ORDERS CONTAINER -->
 </div>
 </div>
 </div>
-<% end %>
-<!-- END ORDERS CONTAINER -->
