Chanign display flex to tables to allign the itmes

--- a/app/assets/stylesheets/pages/_payment_checkout.scss
+++ b/app/assets/stylesheets/pages/_payment_checkout.scss
@@ -59,3 +59,13 @@ span{
   background: black !important;
       width: 200px;
 }}
+
+.total-checkout {
+  border-top: 2px solid black;
+  margin-top: 15px;
+  font-weight: bolder;
+}
+
+.total-bold{
+  font-weight: bolder;
+}
