--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>TODO</title>
+  <title>waste'd</title>
   <%= csrf_meta_tags %>
   <%= action_cable_meta_tag %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
@@ -13,7 +13,7 @@
   <%= stylesheet_pack_tag "map" %>
   <%= stylesheet_pack_tag "application" %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
-
+  <%= favicon_link_tag asset_path('carrot1.png') %>
 </head>
 <body>
   <%= render 'shared/navbar' %>
